// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyTaskForm Test Empty form completed task rendering 1`] = `
<EmptyTaskForm
  enabled={true}
  formSchema={
    Object {
      "$schema": "https://json-schema.org/draft/2019-09/schema",
      "phases": Array [
        "complete",
        "release",
      ],
      "properties": Object {
        "traveller": Object {
          "input": true,
          "output": true,
          "properties": Object {
            "address": Object {
              "properties": Object {
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "street": Object {
                  "type": "string",
                },
                "zipCode": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "email": Object {
              "format": "email",
              "type": "string",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
          },
          "required": Array [
            "firstName",
            "lastName",
          ],
          "type": "object",
        },
        "trip": Object {
          "input": true,
          "properties": Object {
            "begin": Object {
              "format": "date-time",
              "type": "string",
            },
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "end": Object {
              "format": "date-time",
              "type": "string",
            },
            "visaRequired": Object {
              "type": "boolean",
            },
          },
          "type": "object",
        },
        "visaApplication": Object {
          "input": true,
          "properties": Object {
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "duration": Object {
              "type": "integer",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
            "passportNumber": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    }
  }
  submit={[MockFunction]}
  userTask={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": 2020-02-19T11:11:56.282Z,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": 2020-02-19T11:11:56.282Z,
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": 2020-02-19T11:11:56.282Z,
      "state": "Completed",
    }
  }
>
  <Bullseye
    data-ouia-component-type="empty-task-form"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-type="empty-task-form"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="large"
      >
        <div
          className="pf-c-empty-state pf-m-lg"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              color="var(--pf-global--info-color--100)"
              icon={[Function]}
            >
              <InfoCircleIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="var(--pf-global--info-color--100)"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden="true"
                  aria-labelledby={null}
                  className="pf-c-empty-state__icon"
                  fill="var(--pf-global--info-color--100)"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </InfoCircleIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h4"
              size="lg"
            >
              <h4
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-2"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                Cannot show task form
              </h4>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                <p>
                  Task
                   
                  <b>
                    Apply for visa
                     (
                    45a73
                    )
                  </b>
                   doesn't have a form to show. This usually means that it doesn't require data to be filled by the user.
                </p>
              </div>
            </EmptyStateBody>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</EmptyTaskForm>
`;

exports[`EmptyTaskForm Test Empty form rendering 1`] = `
<EmptyTaskForm
  enabled={true}
  formSchema={
    Object {
      "$schema": "https://json-schema.org/draft/2019-09/schema",
      "phases": Array [
        "complete",
        "release",
      ],
      "properties": Object {
        "traveller": Object {
          "input": true,
          "output": true,
          "properties": Object {
            "address": Object {
              "properties": Object {
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "street": Object {
                  "type": "string",
                },
                "zipCode": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "email": Object {
              "format": "email",
              "type": "string",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
          },
          "required": Array [
            "firstName",
            "lastName",
          ],
          "type": "object",
        },
        "trip": Object {
          "input": true,
          "properties": Object {
            "begin": Object {
              "format": "date-time",
              "type": "string",
            },
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "end": Object {
              "format": "date-time",
              "type": "string",
            },
            "visaRequired": Object {
              "type": "boolean",
            },
          },
          "type": "object",
        },
        "visaApplication": Object {
          "input": true,
          "properties": Object {
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "duration": Object {
              "type": "integer",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
            "passportNumber": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    }
  }
  submit={[MockFunction]}
  userTask={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": 2020-02-19T11:11:56.282Z,
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": 2020-02-19T11:11:56.282Z,
      "state": "Ready",
    }
  }
>
  <Bullseye
    data-ouia-component-type="empty-task-form"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-type="empty-task-form"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="large"
      >
        <div
          className="pf-c-empty-state pf-m-lg"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              color="var(--pf-global--info-color--100)"
              icon={[Function]}
            >
              <InfoCircleIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="var(--pf-global--info-color--100)"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden="true"
                  aria-labelledby={null}
                  className="pf-c-empty-state__icon"
                  fill="var(--pf-global--info-color--100)"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </InfoCircleIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h4"
              size="lg"
            >
              <h4
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                Cannot show task form
              </h4>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                <p>
                  Task
                   
                  <b>
                    Apply for visa
                     (
                    45a73
                    )
                  </b>
                   doesn't have a form to show. This usually means that it doesn't require data to be filled by the user.
                </p>
                <br />
                <p>
                  You can still use the actions bellow to move the task to the next phase.
                </p>
              </div>
            </EmptyStateBody>
            <EmptyStateSecondaryActions>
              <div
                className="pf-c-empty-state__secondary"
              >
                <Button
                  isDisabled={false}
                  key="submit-complete"
                  onClick={[Function]}
                  type="submit"
                  variant="primary"
                >
                  <ButtonBase
                    innerRef={null}
                    isDisabled={false}
                    onClick={[Function]}
                    type="submit"
                    variant="primary"
                  >
                    <button
                      aria-disabled={false}
                      aria-label={null}
                      className="pf-c-button pf-m-primary"
                      data-ouia-component-id="OUIA-Generated-Button-primary-1"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe={true}
                      disabled={false}
                      onClick={[Function]}
                      role={null}
                      type="submit"
                    >
                      Complete
                    </button>
                  </ButtonBase>
                </Button>
                <Button
                  isDisabled={false}
                  key="submit-release"
                  onClick={[Function]}
                  type="submit"
                  variant="secondary"
                >
                  <ButtonBase
                    innerRef={null}
                    isDisabled={false}
                    onClick={[Function]}
                    type="submit"
                    variant="secondary"
                  >
                    <button
                      aria-disabled={false}
                      aria-label={null}
                      className="pf-c-button pf-m-secondary"
                      data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe={true}
                      disabled={false}
                      onClick={[Function]}
                      role={null}
                      type="submit"
                    >
                      Release
                    </button>
                  </ButtonBase>
                </Button>
              </div>
            </EmptyStateSecondaryActions>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</EmptyTaskForm>
`;
